static/css/style.css
body {
    font-family: Lato, Dancing Script, Sans-serif;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

html, body {
    scroll-behavior: smooth;
}

main {
    flex: 1 0 auto;
    margin-top: 50px;
}

nav li a {
    font-size: 20px;
    font-weight: 700;
    color: #E71D36;
}

nav i {
    color: #E71D36;
}

.sidenav h4 {
    color: #E71D36;
    font-family: Dancing Script, Lato, Sans-serif;
    font-weight: 700;
    margin-left: 30px;
}

.sidenav li a {
    color: #033F63;
    font-size: 18px;
}

#nav-logo {
    margin-top: 10px;
    height: 80px;
    width: 80px;
}

.home-page h1 {
    font-family: Dancing Script, Lato, Sans-serif;
    font-weight: 700;
    color: #E71D36;
}

.home-page p {
    font-size: 25px;
    font-weight: 700;
    color: #033F63;
}

#login-btn {
    background-color: #033F63;
    color: #FFFFFF;
    width: 175px;
    margin: 5px;
}

#register-btn {
    background-color: #E71D36;
    color: #FFFFFF;
    width: 175px;
    margin: 5px;
}

#bg-image {
    background-image: url(../images/strawberries.jpg);
    background-color: rgba(255, 255, 255, 0.8);
    background-repeat: no-repeat;
    background-size: cover;
    background-blend-mode: lighten;
}

.page-footer {
    background-color: rgba(231, 29, 54, 0.4);
    color: #FFFFFF;
    margin-top: 50px;
}

.social-media i {
    color: #FFFFFF;
}

.icon-bg {
    padding: 10px;
    margin: 0 5px;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    background-color: #E71D36;
}

.register-title {
    font-family: Dancing Script, Lato, Sans-serif;
    font-weight: 700;
    color: #E71D36;
}

.input-field i {
    color: #033F63;
}

.register-form button[type="submit"] {
    background-color: #E71D36;
    color: #FFFFFF;
    font-size: 18px;
    margin: 5px;
}

.input-field label {
    color: #033F63;
}

.input-field .prefix.active {
    color: #033F63;
}

.flash-message {
    font-family: Lato, Dancing Script Sans-serif;
    line-height: 2;
    font-weight: 700;
    color: #033F63;
}

